--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -17,11 +17,13 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
 }
 
 body {
   min-width: 320px;
   min-height: 100vh;
+  background-color: #eee;
 }
 
 /***
@@ -51,7 +53,15 @@ button {
   font-family: inherit;
   background-color: #1a1a1a;
   cursor: pointer;
-  transition: border-color 0.25s;
+  transition: border-color 0.25s, background-color 0.1s ease-in-out;
+}
+
+.__btn {
+  background-color: #535bf2;
+  color: #fff;
+}
+.__btn:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
 }
 
 button:hover {
@@ -61,6 +71,37 @@ button:hover {
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+input,
+.form-control {
+  border: 1px solid #ced4da;
+}
+input::placeholder,
+.form-control::placeholder {
+  color: #9ea0a3;
+}
+
+input:focus,
+input:hover {
+  box-shadow: none !important;
+}
+
+.dropdown-menu {
+  transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+
+.dropdown-item {
+  transition: background-color 0.1s ease-in-out;
+}
+
+.dropdown-item.active {
+  background-color: #6169f3;
+  color: #fff;
+}
+
+.dropdown-item:active {
+  background-color: #535bf2;
 }
 
 @media (prefers-color-scheme: light) {
@@ -83,10 +124,99 @@ button:focus-visible {
   top: 0;
   left: 0;
   width: 100%;
-  height: 60px;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 0.5em 1em;
-  background-color: #535bf2;
+  padding: 1.4rem;
+  background-color: #fff;
+  z-index: 1000000000;
 }
+.__navbar-section .__navbar--logo img {
+  width: 100px;
+  height: auto;
+  object-fit: cover;
+}
+.__navbar-section .__navbar--search {
+  width: 100%;
+  max-width: 700px;
+  margin-left: 1rem;
+}
+.__navbar-section .__navbar--search .__serach--dropdownbtn {
+  background-color: #eee;
+  border: 1px solid #cfcfcf;
+  border-right: 0;
+}
+.__navbar-section .__navbar--search input {
+  padding: 0.5rem 1rem;
+  transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.__navbar-section .__navbar--search input:hover + .__serach--dropdownbtn {
+  border-color: #535bf2 !important;
+}
+.__navbar-section .__navbar--menu .__item {
+  padding: 0.6rem 0.8rem;
+  border-radius: 100rem;
+  background-color: rgba(83, 91, 242, 0.05);
+  margin: 0 0.5rem;
+}
+.__navbar-section .__navbar--menu .__item svg {
+  margin-bottom: 0.2rem;
+}
+.__navbar-section .__navbar--menu .__item:hover {
+  background-color: rgba(83, 91, 242, 0.165);
+}
+.__navbar-section .__navbar--menu .__item-menu {
+  margin-left: 1rem;
+}
+.__navbar-section .__navbar--menu .__item-menu:hover {
+  background-color: rgba(83, 91, 242, 0.07);
+}
+.__navbar-section .__navbar--menu .__item-menu:active {
+  background-color: rgba(83, 91, 242, 0.165);
+}
+.__navbar-section .__navbar--menu .__item-menu img {
+  width: 33px;
+  height: 33px;
+  object-fit: cover;
+  border-radius: 100rem;
+}
+
+/***
+* Menu Section
+***/
+.__menu-section {
+  background-color: #fff;
+  width: 100%;
+  padding: 1rem;
+  box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+}
+.__menu-section .__menu-top {
+  border-bottom: 1px solid rgba(83, 91, 242, 0.5);
+}
+.__menu-section .__menu-top > div {
+  cursor: pointer;
+  user-select: none;
+  padding: 0.3rem 1rem 0.5rem 1rem;
+  margin: 0 0.3rem;
+  border: 1px solid transparent;
+}
+.__menu-section .__menu-top > div:hover {
+  color: #535bf2;
+}
+.__menu-section .__menu-top > div.active {
+  border: 1px solid rgba(83, 91, 242, 0.5);
+  color: #535bf2;
+  border-bottom: 1px solid #fff;
+  margin-bottom: -1px;
+}
+
+/***
+* Hero Section
+***/
+.__hero-section {
+  width: 100%;
+}
+
+/***
+* Responsive Media 
+***/
