--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,12 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700;800;900&display=swap');
-
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;500;600;700;800;900&display=swap");
 $primary-color: #eee;
 $primary-text-color: #242424;
-$secondary-color: #535bf2;
-$secondary-text-color: #ffffff;
-
+$secondary-color: #fff;
+$secondary-text-color: #242424;
+$action-color: #535bf2;
+$action-text-color: #fff;
 :root {
- font-family: Lato, system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+ font-family: Lato, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI",
+  Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", Helvetica,
+  Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;
 
@@ -20,16 +22,17 @@ $secondary-text-color: #ffffff;
  -moz-osx-font-smoothing: grayscale;
  -webkit-text-size-adjust: 100%;
 }
-
 * {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
+ transition: color 0.1s ease-in-out, background-color 0.1s ease-in-out;
 }
-
 body {
  min-width: 320px;
  min-height: 100vh;
+ background-color: $primary-color;
+ //  background: linear-gradient(5deg, $primary-color 50%, rgba($action-color, 0.2) 50%);
 }
 
 /***
@@ -43,12 +46,10 @@ a {
 a:hover {
  color: darken($primary-text-color, 10%);
 }
-
 h1 {
  font-size: 3.2em;
  line-height: 1.1;
 }
-
 button {
  border-radius: 8px;
  border: 1px solid transparent;
@@ -58,7 +59,14 @@ button {
  font-family: inherit;
  background-color: #1a1a1a;
  cursor: pointer;
- transition: border-color 0.25s;
+ transition: border-color 0.25s, background-color 0.1s ease-in-out;
+}
+.__btn {
+ background-color: $action-color;
+ color: $action-text-color;
+ &:focus {
+  box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
+ }
 }
 button:hover {
  border-color: #646cff;
@@ -67,7 +75,30 @@ button:focus,
 button:focus-visible {
  outline: 4px auto -webkit-focus-ring-color;
 }
-
+input,
+.form-control {
+ border: 1px solid #ced4da;
+ &::placeholder {
+  color: #9ea0a3;
+ }
+}
+input:focus,
+input:hover {
+ box-shadow: none !important;
+}
+.dropdown-menu {
+ transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
+}
+.dropdown-item {
+ transition: background-color 0.1s ease-in-out;
+}
+.dropdown-item.active {
+ background-color: lighten($action-color, 3%);
+ color: $action-text-color;
+}
+.dropdown-item:active {
+ background-color: $action-color;
+}
 @media (prefers-color-scheme: light) {
  :root {
   color: #213547;
@@ -89,10 +120,103 @@ button:focus-visible {
  top: 0;
  left: 0;
  width: 100%;
- height: 60px;
  display: flex;
  align-items: center;
  justify-content: space-between;
- padding: 0.5em 1em;
+ padding: 1.4rem;
  background-color: $secondary-color;
+ z-index: 1000000000;
+ .__navbar--logo {
+  img {
+   width: 100px;
+   height: auto;
+   object-fit: cover;
+  }
+ }
+ .__navbar--search {
+  width: 100%;
+  max-width: 700px;
+  margin-left: 1rem;
+  .__serach--dropdownbtn {
+   background-color: $primary-color;
+   border: 1px solid #cfcfcf;
+   border-right: 0;
+  }
+  input {
+   padding: 0.5rem 1rem;
+   transition: all 0.1s cubic-bezier(0.075, 0.82, 0.165, 1);
+   &:hover + .__serach--dropdownbtn {
+    border-color: $action-color !important;
+   }
+  }
+ }
+ .__navbar--menu {
+  .__item {
+   padding: 0.6rem 0.8rem;
+   border-radius: 100rem;
+   background-color: rgba($action-color, 0.05);
+   margin: 0 0.5rem;
+   svg {
+    margin-bottom: 0.2rem;
+   }
+   &:hover {
+    background-color: rgba($action-color, 0.165);
+   }
+  }
+  .__item-menu {
+   margin-left: 1rem;
+   &:hover {
+    background-color: rgba($action-color, 0.07);
+   }
+   &:active {
+    background-color: rgba($action-color, 0.165);
+   }
+   img {
+    width: 33px;
+    height: 33px;
+    object-fit: cover;
+    border-radius: 100rem;
+   }
+  }
+ }
 }
+
+/***
+* Menu Section
+***/
+.__menu-section {
+ background-color: #fff;
+ width: 100%;
+ padding: 1rem;
+ box-shadow: 0 0 0.5rem rgba(0, 0, 0, 0.1);
+ .__menu-top {
+  border-bottom: 1px solid rgba($action-color, 0.5);
+  & > div {
+   cursor: pointer;
+   user-select: none;
+   padding: 0.3rem 1rem 0.5rem 1rem;
+   margin: 0 0.3rem;
+   border: 1px solid transparent;
+   &:hover {
+    color: $action-color;
+   }
+   &.active {
+    border: 1px solid rgba($action-color, 0.5);
+    color: $action-color;
+    border-bottom: 1px solid #fff;
+    margin-bottom: -1px;
+   }
+  }
+ }
+}
+
+/***
+* Hero Section
+***/
+.__hero-section {
+    width: 100%;
+}
+
+/***
+* Responsive Media 
+***/
