--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -138,9 +138,8 @@ input:hover {
   max-width: 700px;
   margin-left: 1rem;
   .__serach--dropdownbtn {
-   background-color: $primary-color;
+   background-color: $secondary-color;
    border: 1px solid #cfcfcf;
-   border-right: 0;
   }
   input {
    padding: 0.5rem 1rem;
